[package]
name = "gradual-sdk"
version = "0.1.0"
edition = "2021"
description = "Gradual feature flag SDK for Rust"
license = "MIT"
repository = "https://github.com/elijahnikov/gradual-rust"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
urlencoding = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
